2007-07-05  Rudi Schlatte  <rudi@constantly.at>

	* maude-mode.el (maude-font-lock-keywords, maude-warnings): fth,
	endfth are in core maude.

2007-06-27  Rudi Schlatte  <rudi@constantly.at>

	* maude-mode.el (maude-font-lock-keywords): more permissive
	variable names.
	(maude-indent-line): use whitespace instead of word boundaries for
	indentation of keywords, so e.g. "in-buffer" at beginning of line
	is not indented like the command "in".

2007-06-26  Rudi Schlatte  <rudi@constantly.at>

	* maude-mode.el (maude-mode-menu, maude-mode): Add "Maude"
	pull-down menu.

2007-06-25  Rudi Schlatte  <rudi@constantly.at>

	* maude-mode.el: change fontification so that equations and
	rewrite rules across multiple lines are colored.  Support views in
	core maude.
	(maude-flk-label, maude-font-lock-keywords): support typenames
	like Map{Nat,Qid} etc.
	(maude-font-lock-keywords): Support --- comments
